# arvai

./: .gitignore  LICENSE  README.md
desktop/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
desktop/src/: App.tsx  index.css  types.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: main.rs
desktop/src/components/: AddBookmarkModal.tsx  BookmarkCard.tsx  BookmarkDetail.tsx  EmptyState.tsx  ExtensionConnect.tsx  SearchBar.tsx  Sidebar.tsx
desktop/src/hooks/: useBookmarks.ts
desktop/src/lib/: shell.ts  utils.ts
extension/: components.json  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
extension/public/: background.js  content-script.js  manifest.json
extension/scripts/: copy-assets.js
extension/src/: index.css
extension/src/lib/: api.ts  connection.ts  i18n.ts  storage.ts
extension/src/locales/: en.ts  index.ts  zh.ts
extension/src/popup/: Popup.tsx
extension/src/popup/components/: BookmarkButton.tsx  BookmarkSection.tsx  BookmarkStatus.tsx  ConnectionSection.tsx  ConnectionSetup.tsx
extension/src/types/: index.ts
kernel/: README.md  config.yaml  pyproject.toml
kernel/app/: __init__.py  auth.py  config.py  crud.py  database.py  main.py  models.py  schemas.py
kernel/app/crud/: __init__.py  api_keys.py  bookmarks.py
kernel/app/routers/: api_keys.py  bookmarks.py
